Create method for creating spectrogram for each file

--- a/bird_call_classifier.ipynb
+++ b/bird_call_classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12MDa7R1KEDRHaR_mBnpADS2a3d6aYzK3",
-      "authorship_tag": "ABX9TyN4XeTWpmBtdwm+GcUWgAXM",
+      "authorship_tag": "ABX9TyOgwVLxG9ZY9BZGOM0oTUOQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "zIYcwv2kurq-"
       },
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "ZCW0Vuc23--z"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "56hBY6aw4jdx"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -115,9 +115,9 @@
           "height": 430
         },
         "id": "zz48IXaWvoIZ",
-        "outputId": "c46769bb-2009-4b33-fe56-6a92a1571a2d"
+        "outputId": "10c518a4-43d6-4ada-cf9c-e3b0112118b6"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -130,6 +130,165 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define file paths for positive and negative data\n",
+        "\n",
+        "POS = os.path.join(\"/content/drive/MyDrive/Datasets/Bird_Call_Data\" ,\"Parsed_Capuchinbird_Clips\")\n",
+        "NEG = os.path.join(\"/content/drive/MyDrive/Datasets/Bird_Call_Data\", \"Parsed_Not_Capuchinbird_Clips\")"
+      ],
+      "metadata": {
+        "id": "ZJeiWY0Ejm-i"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create Tensorflow datasets for each set of files\n",
+        "\n",
+        "pos = tf.data.Dataset.list_files(POS+'/*.wav')\n",
+        "neg = tf.data.Dataset.list_files(NEG+'/*.wav')"
+      ],
+      "metadata": {
+        "id": "-gKMjdaNkFl3"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "positives = tf.data.Dataset.zip((pos, tf.data.Dataset.from_tensor_slices(tf.ones(len(pos)))))\n",
+        "negatives = tf.data.Dataset.zip((neg, tf.data.Dataset.from_tensor_slices(tf.zeros(len(neg)))))\n",
+        "\n",
+        "data = positives.concatenate(negatives)"
+      ],
+      "metadata": {
+        "id": "_WTzGczYkR9j"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lengths = []\n",
+        "for file in os.listdir(os.path.join(\"/content/drive/MyDrive/Datasets/Bird_Call_Data\" ,\"Parsed_Capuchinbird_Clips\")):\n",
+        "\ttensor_wave = load_wav_16k_mono(os.path.join(\"/content/drive/MyDrive/Datasets/Bird_Call_Data\" ,\"Parsed_Capuchinbird_Clips\", file))\n",
+        "\tlengths.append(len(tensor_wave))\n",
+        "\n",
+        "lengths"
+      ],
+      "metadata": {
+        "id": "Y6NpDp5ip1T5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.math.reduce_mean(lengths)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kYS5sYWLa3V8",
+        "outputId": "69623abe-6e67-47ec-fe40-0460fa08f16e"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=54156>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.math.reduce_min(lengths)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b_e2UlEubxVu",
+        "outputId": "3f49b9cb-e611-4679-9018-6ca3c44df8ea"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=32000>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.math.reduce_max(lengths)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ETSMyRXJb1rj",
+        "outputId": "6a1258df-efd4-415b-e84d-c2c927af8cb3"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=80000>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def preprocess (file_path, label):\n",
+        "\twav = load_wav_16k_mono(file_path)\n",
+        "\twav = wav[:48000] # Caps the samples to 48000 length (too long = more time loading)\n",
+        "\n",
+        "\tzero_padding = tf.zeros([48000] - tf.shape(wav), dtype=tf.float32)\n",
+        "\twav = tf.contat([zero_padding, wav],0)\n",
+        "\t# If file_path is shorter than 48000, then it fills the rest with 0's\n",
+        "\n",
+        "\tspectrogram = tf.signal.stft(wav, frame_length = 320, frame_step = 32)\n",
+        "\tspectrogram = tf.abs(spectrogram)\n",
+        "\tspectrogram = tf.expand_dims(spectrogram, axis=2)\n",
+        "\n",
+        "\treturn spectrogram"
+      ],
+      "metadata": {
+        "id": "NYrtalhWsQQk"
+      },
+      "execution_count": 37,
+      "outputs": []
     }
   ]
 }
